# CarterClient

./: .gitignore  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/actions/publish-artifacts/: action.yaml
src/: app.html  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20230801154709_init/: migration.sql
src-tauri/prisma/migrations/20230802160408_agent_key_in_convo/: migration.sql
src-tauri/src/: carter.rs  library.rs  main.rs
src-tauri/src/commands/: agent.rs  chat.rs
src/lib/: ChatInput.svelte  Codeblock.svelte  Dialog.svelte  Sidebar.svelte  Subsidebar.svelte  Time.svelte
src/lib/agent/: Description.svelte
src/lib/assets/: AgentsIcon.svelte  ChatIcon.svelte  ChatQuestion.svelte  SettingsIcon.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/agent/: +layout.svelte  +page.svelte
src/routes/agent/[id]/: +page.svelte
src/routes/agent/create/: +page.svelte
src/routes/chat/: +layout.svelte  +page.svelte
src/routes/chat/[id]/: +page.svelte  +page.ts
src/routes/chat/create/: +page.svelte
src/routes/settings/: +page.svelte
